# lorebinders2

./: .gitignore  .pre-commit-config.yaml  README.md  architecture.md  commit_log.txt  commit_log_2.txt  commit_output.txt  models_output.txt  output.txt  pyproject.toml  ruff_output_3.txt  ruff_output_4.txt  ruff_output_5.txt  test_e2e_recheck.txt  test_output_2.txt
.gemini/: settings.json
.spec-workflow/specs/aggregation-refinement/: tasks.md
.spec-workflow/specs/aggregation-refinement/Implementation Logs/: task-1_2026-01-16T0336_6218679b.md  task-2_2026-01-16T0340_55a3030f.md  task-3_2026-01-16T0343_fa5105f8.md  task-4_2026-01-16T0346_c71cf368.md  task-5_2026-01-16T0349_cc6c5ed9.md  task-6_2026-01-16T0352_4f05626f.md  task-6_2026-01-16T0352_fb9f4002.md
src/lorebinders/: __init__.py  agent.py  app.py  builder.py  cli.py  cli_adapters.py  logging.py  models.py  settings.py  types.py  workflow.py
src/lorebinders/agent/: __init__.py  analysis.py  core.py  extraction.py  factory.py  settings.py  summarization.py
src/lorebinders/agent/assets/: __init__.py
src/lorebinders/agent/assets/prompts/: __init__.py  analysis.txt  extraction.txt  summarization.txt
src/lorebinders/agents/: __init__.py  analysis.py  extraction.py  models.py  summarization.py
src/lorebinders/assets/prompts/: analysis.txt  extraction.txt  summarization.txt
src/lorebinders/cli/: __cli__.py  __init__.py  configuration.py
src/lorebinders/core/: __init__.py  interfaces.py  models.py
src/lorebinders/ingestion/: ingester.py  persistence.py  workspace.py
src/lorebinders/refinement/: __init__.py  cleaner.py  cleaning.py  conversion.py  deduplication.py  manager.py  normalization.py  patterns.py  resolver.py  sorting.py  summarization.py  summarizer.py
src/lorebinders/reporting/: pdf.py  styles.py
src/lorebinders/storage/: __init__.py  db.py  extractions.py  factory.py  profiles.py  provider.py  summaries.py  workspace.py
src/lorebinders/storage/providers/: db.py  file.py  test.py
tests/: conftest.py  test_cli_skeleton.py  utils.py
tests/e2e/: test_full_cli.py  test_ingestion_workflow.py
tests/integration/: test_agents.py  test_cli_integration.py
tests/unit/: test_agent_models.py  test_analysis_agent.py  test_app.py  test_builder.py  test_cli.py  test_cli_adapters.py  test_conversion.py  test_extraction_agent.py  test_ingester.py  test_interfaces.py  test_models.py  test_pdf.py  test_pdf_reporter.py  test_storage_db.py  test_workflow.py  test_workspace.py
tests/unit/agents/: test_analysis_agent.py  test_extraction_agent.py  test_settings.py  test_summarization_agent.py
tests/unit/cli/: test_cli.py  test_configuration.py
tests/unit/refinement/: test_cleaner.py  test_cleaning.py  test_conversion.py  test_deduplication.py  test_manager.py  test_normalization.py  test_refinement_init.py  test_resolver.py  test_sorting.py  test_summarizer.py  test_text_normalization.py
tests/unit/reporting/: test_pdf.py
tests/unit/storage/: test_file_storage.py  test_storage_db.py  test_workspace.py
