[project]
name = "lorebinders"
version = "0.3.0"
description = "Create a story bible with AI from a finished manuscript"
requires-python = ">=3.10"
readme = "README.md"
licence = {text = "Apache-2.0"}
authors = [{ name = "Ashlynn Antrobus", email = "ashlynn@prosepal.io" }]
keywords = ["AI", "fiction", "manuscript", "story bible", "writing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
lorebinders = "lorebinders:main"

[project.urls]
"Homepage" = "https://prosepal.io"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
files = ["src/lorebinders/**/*.py"]
ignore_missing_imports = true
python_version = "3.10"

[tool.ruff]
exclude = [
    "*.json",
    "*cache",
    "*cov",
    ".git",
    ".venv",
    ".vscode",
    "__pycache__",
    "test*",
    "work",
]
force-exclude = true
line-length = 80

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = ["A002", "ANN002", "ANN003", "ANN204", "ANN401", "D100", "D417"]
select = ["A", "ANN", "D", "DOC", "E", "F", "I", "N", "UP"]

[tool.ruff.lint.isort]
#:reorderArrays false
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = ["--cov=lorebinders"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "*/_types.py",
    "lorebinders/_exceptions.py",
    "lorebinders/_type_annotations.py",
]

[tool.coverage.report]
exclude_also = [
    "@(abc\\.)?abstractmethod",
    "__all__",
    "class .*\\bProtocol\\):",
    "def __repr__",
    "if 0:",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", { include-group = "testing" }]
lint = ["mypy>=1.15.0", "ruff>=0.11.11"]
testing = [
    "pypdf>=5.5.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
]
